--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,7 +1,98 @@
-/*
- * Главный файл стилей.
- * Все паршалы подключаются сюда.
- */
+* {
+	box-sizing: border-box;
+}
 
-// Стили для файла с примером HTML-фрагмента
-@import './example';
+body {
+	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
+		"Helvetica Neue", sans-serif;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+	background-color: #fafafa;
+	color: #212121;
+	line-height: 1.5;
+}
+
+#search-form {
+	font: inherit;
+	padding: 8px;
+	max-width: 320px;
+	margin-bottom: 16px;
+}
+
+.gallery {
+	display: grid;
+	grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+	grid-gap: 15px;
+	justify-content: center;
+}
+
+.photo-card {
+	box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2);
+	border-radius: 5px;
+	overflow: hidden;
+	text-decoration: none;
+	color: inherit;
+}
+.photo-card :hover {
+	cursor: pointer;
+}
+img {
+	width: 100%;
+	height: 80%;
+}
+
+.info {
+	display: flex;
+	justify-content: space-around;
+	text-align: center;
+	font-size: 12px;
+}
+
+.search-form {
+	display: block;
+	margin: 0 auto;
+}
+
+.search-form input {
+	border: 2px solid #eee;
+	border-radius: 5px;
+	font-size: 18px;
+	display: block;
+	margin: 0 auto;
+	color: red;
+	outline: none;
+	padding: 5px;
+}
+.search-form input:focus {
+	border-color: red;
+}
+.search-form input::placeholder {
+	font-size: 12px;
+}
+
+button {
+	display: block;
+	margin: 0 auto;
+	font-size: 18px;
+	margin-top: 10px;
+	padding: 5px 20px;
+	background-color: red;
+	color: #fff;
+	border: inherit;
+	border-radius: 8px;
+	outline: none;
+	cursor: pointer;
+}
+
+button:active {
+	background-color: pink;
+	box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2);
+}
+
+button:disabled {
+	background-color: #fb98c9;
+}
+
+button.is-hidden {
+	display: none;
+}
